# rust-api

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_prod  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  entrypoint_test.sh
db/: Dockerfile_pg  Dockerfile_pg_test  entrypoint.sh  entrypoint_test.sh
migrations/2023-01-05-023748_books/: up.sql
migrations/2023-01-05-023809_members/: up.sql
src/: db.rs  error_handler.rs  lib.rs  main.rs  schema.rs  swagger.rs  utils.rs
src/books/: mod.rs  model.rs  routes.rs
src/employees/: model.rs  routes.rs
src/members/: mod.rs  model.rs  routes.rs
tests/: integration_tests.rs
tests/init_tests/: mod.rs
