[package]
name = "api_rust"
version = "0.1.0"
authors = ["Adrian Lara <mitomono@gmail.com>"]
edition = "2021"

[lib]
name = "lib_api"
path = "src/lib.rs"

[[bin]]
name = "api_rust"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
env_logger = "0.10.0"
lazy_static = "1.4"
listenfd = "1.0.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.20"
serde_path_to_error = "0.1"
validator = "0.16.0"
validator_derive = "0.16.0"
r2d2 = "0.8"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
rusqlite = "0.28.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
utoipa = { features = ["actix_extras"], version = "2.4.2" }
utoipa-swagger-ui = { features = ["actix-web"], version = "3.0.1" }